<resources>
    <string name="app_name">InventoryApp</string>
    <string name="delete_all">All Inventories Deleted</string>
    <string name="toast_error_deleting">Error Deleting Inventory</string>
    <string name="editor_delete_product_failed">Could not delete Item</string>
    <string name="editor_delete_product_successful">Item deleted Successfully</string>
    <string name="delete_all_dialog_msg">Delete All Inventory</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete This Item</string>
    <string name="unsaved_changes_dialog_msg">Keep Unsaved Changes</string>
    <string name="discard">Discard Changes</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="inventory_info">INVENTORY INFORMATION</string>
    <string name="inventory_name_hint">Inventory Name</string>
    <string name="inventory_price">Price(INR)</string>
    <string name="inventory_stock">Stock</string>
    <string name="inventory_supplier_info">SUPPLIER INFORMATION</string>
    <string name="inventory_supplier_name">Supplier Name</string>
    <string name="inventory_supplier_email">Email</string>
    <string name="inventory_supplier_phone">Phone No.</string>
    <string name="empty_view_title">Click the Plus button to Add an Inventory</string>
    <string name="empty_image_view">Empty Image View</string>
    <string name="success">Sold Successfully</string>
    <string name="no_stock">No stock</string>
    <string name="action_delete_all">Delete All</string>
    <string name="save">Save</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="inventory_category_hint">Category</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_electronics">Electronics</string>
    <string name="category_household">Household</string>
    <string name="category_others">Others</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="edit_inventory">Edit Inventory</string>
    <string name="error_picking_image">Error While Picking Image</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="error_saving_inventory">Error Saving Inventory</string>
    <string name="successfully_saved_inventory">Successfully Saved</string>
    <string name="successfully_updated_inventory">Updated Successfully</string>
    <string name="error_updating_inventory">Error while Updating.</string>
    <string name="quantity">Quantity</string>
    <string name="no_email_app">No email Application Present</string>
    <string name="no_email_receiptant">No email Application Present</string>
</resources>
