<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_detail_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/empty_image_view"
            android:scaleType="fitXY"
            android:src="@drawable/ic_photo_camera_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/colorSecondary"
                android:gravity="center"
                android:text="@string/inventory_info"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/inventory_name_hint"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/inventory_category_hint"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/inventory_price"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/inventory_stock"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/inventory_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/inventory_name_hint"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/inventory_category_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/inventory_category_hint"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/inventory_price_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/inventory_price"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:weightSum="3">

                        <ImageButton
                            android:id="@+id/inventory_stock_increase_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:background="@drawable/ic_add_shopping_cart_black_24dp"
                            android:contentDescription="@string/empty_image_view" />

                        <TextView
                            android:id="@+id/inventory_stock_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:hint="@string/inventory_stock"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                        <ImageButton
                            android:id="@+id/inventory_stock_decrease_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:background="@drawable/ic_remove_shopping_cart_black_24dp"
                            android:contentDescription="@string/empty_image_view" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorSecondary"
                android:gravity="center"
                android:text="@string/inventory_supplier_info"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="3">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/inventory_supplier_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/inventory_supplier_email"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView66"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:text="@string/inventory_supplier_email"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/inventory_supplier_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/inventory_supplier_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <ImageButton
                            android:id="@+id/inventory_supplier_email_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:background="@drawable/ic_email_black_24dp"
                            android:contentDescription="@string/empty_image_view" />

                        <TextView
                            android:id="@+id/inventory_supplier_email_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/inventory_supplier_email"
                            android:padding="5dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <ImageButton
                            android:id="@+id/inventory_supplier_phone_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/ic_phone_black_24dp"
                            android:contentDescription="@string/empty_image_view" />

                        <TextView
                            android:id="@+id/inventory_supplier_phone_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/inventory_supplier_phone"
                            android:padding="5dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>