<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/colorSecondary"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/inventory_name_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:hint="@string/inventory_name_hint"
            android:padding="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/inventory_price_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:hint="@string/inventory_price"
            android:padding="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <TextView
        android:id="@+id/inventory_stock_id"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:hint="@string/quantity"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/sell_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        app:srcCompat="@drawable/ic_shopping_cart_black_36dp" />

    <ImageView
        android:id="@+id/view_detail_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="3dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_touch_app_black_24dp" />

</LinearLayout>

